HISTORY

[Version x.y.z (x86 w2k driver size in Kbytes)   release date]

  Version 1.4.1 (22.5)   2008-10-
  ------------------------------------------------------------------------------
    - UltraDefrag Micro Edition package was added
    - a lot of portable application bugs were fixed
    - gui program was translated into the following languages:
      


  Version 1.4.0 (22.5)   2008-10-02
  ------------------------------------------------------------------------------
    - i18n support was added
    - gui program was translated into Hungarian and Russian languages
    - documentation was improved
    - program settings were moved to one file
    - gui design was improved and simplified
    - console program's option -l was added
    - many significant bugs were fixed (possible buffer overflows)


  Version 1.3.4 (22.5)   2008-03-09
  ------------------------------------------------------------------------------
    - new installation location: %windir%\UltraDefrag
    - driver code was simplified
    - most stable release at this moment

  Version 1.3.3 (22.5)   2008-03-07
  ------------------------------------------------------------------------------
    - one important driver bug was fixed
    - few x64 installation bugs were fixed

  Version 1.3.2 (22.5)   2008-03-03
  ------------------------------------------------------------------------------
    - few important bugs were fixed

  Version 1.3.1 (22.5)   2008-03-02
  ------------------------------------------------------------------------------
    - SCSI and RAID volumes support was added
    - some significant bugs were fixed
    - new installation location: %windir%\system32\UltraDefrag

  Version 1.3.0 (22.5)   2008-02-06
  ------------------------------------------------------------------------------
    - driver code was completely rewritten (to improve reliability)
    - highly configurable reports feature was added
    - report sorting ability was added
    - documentation was improved