@@ -18,7 +18,7 @@ TD {text-align:left}
 </head>
 <body>
 <center><hr /><font size="+1">U</font>ltra <font size="+1">D</font>efragmenter
-<font size="+1">V</font>ersion <font size="+1">1.3.4</font><br />
+<font size="+1">V</font>ersion <font size="+1">1.4.1</font><br />
 <br />Copyright (C) 2007,2008 <a href="mailto:dmitriar + at + gmail + dot + com">Dmitri Arkhangelski</a>, 
 <a href="mailto:zippy1981 + at + gmail + dot + com">Justin Dearing</a>.<br />
 <hr />
@@ -49,10 +49,11 @@ Vista, driver gives us an interesting features and advantages over other defragg
 <p>ZenWINX is a common set of functions that most programs needs. Boot time defragger 
 can't use win32 environment, it should use only ntdll.dll, but this library doesn't 
 contain many important things like keyboard related procedures (gets, getch, kbhit), 
-printf implementation and others. ZenWINX was created to resolve this problem.
+printf implementation and others. ZenWINX was created to resolve this problem. 
+The full documentation for ZenWINX library is <a href="http://zenwinx.sourceforge.net">here</a>.
 </p>
 <p>On the other hand, the udefrag.dll library is just a thin level between the driver and
-user interfaces. It provides more simpler API than driver have. This module can import 
+user interfaces. It provides more simpler API than driver has. This module can import 
 symbols from ntdll.dll (and other native dll's like zenwinx) only, because it is used 
 by native (boot time) application.
 </p>
@@ -63,7 +64,7 @@ contain any modern scripting languages packages (Python, Perl etc.), so C is bet
 choice here.
 </p>
 <p>As you can see, gui application uses some external software. The report converter
-produce html reports from a simple text file generated by driver. This converter is written 
+produces html reports from a simple text file generated by driver. This converter is written 
 in Lua, because this language has much better support for string manipulations than C or 
 C++ have, and it's a very small package that can be included in UltraDefrag binaries 
 without any problems.
