@@ -61,6 +61,27 @@ to old settings window. Less code we have less bugs we have!!
 
 <tr>
 <td valign="top"><span style="font-weight: bold;">Q.:</span></td>
+<td>How can I disable boot time defragmenter manually?</td>
+</tr>
+
+<tr style="height: 10pt;">
+<td></td><td></td>
+</tr>
+
+<tr>
+<td valign="top"><span style="font-weight: bold;">A.:</span></td>
+<td>If something is wrong and boot-off script does not work properly, remove the 
+defrag_native entry from the following Registry parameter manually:<br /><br />
+HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Session Manager\BootExecute
+</td>
+</tr>
+
+<tr style="height: 10pt;">
+<td></td><td></td>
+</tr>
+
+<tr>
+<td valign="top"><span style="font-weight: bold;">Q.:</span></td>
 <td>Why UD doesn't work on x64 Vista with Service Pack 1?</td>
 </tr>
 
