@@ -226,4 +226,7 @@ c). To build UltraDefrag use the BUILD.CMD script; parameters are:
     build --help        show usage information and exit
 
 d). To build UltraDefrag Micro Edition package use the build-micro.cmd scipt.
-    It has the same options that build.cmd has.
+    It has the same options that build.cmd has. After a successfull 
+    compilation you will have ready to use binary packages, but the source 
+    code archive will not be produced (to increase the compilation speed).
+    To make an archive of sources run build.cmd script.
